--- a/assets/style.css
+++ b/assets/style.css
@@ -1,44 +1,301 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    background-color: #f8f9fa;
+/* Entry Page */
+.body-container{
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.login-wrapper {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
+.form-login{
+  padding: 50px;
+  margin-top: 150px;
 }
 
-.login-title {
-    font-size: 8vw; /* musabay ni with screen size */
-    font-weight: bold;
-    margin-bottom: 10px;
+.entryH{
+  font-size: 70px;
+  font-weight: bolder;
 }
 
-.login-subtitle {
-    color: red;
-    font-size: 1.1rem;
-    margin-bottom: 30px;
+.entryP{
+  color: red;
+  font-size: 15px;
 }
 
-.login-form {
-    width: 100%;
-    max-width: 400px;
+.entryfield{
+  height: 30px;
+  width: 250px;
 }
 
-.form-control {
-    border-radius: 0;
-    border: 1px solid #000;
-    padding: 10px;
+.btn-entry{
+  font-weight: bolder;
+  color:  white;
+  background-color: #004aad;
 }
 
-.btn-login {
-    border-radius: 0;
-    width: 50%; 
-    margin-top: 15px;
+/* Homepage */
+.sideBar{
+  background-color: #004aad;
+  height: 700px;
+  width: 300px;
+  padding: 20px;
 }
+
+.sideBar-content{
+  height: 660px;
+  width: 100%;
+}
+
+.sideBarlogo{
+  padding: 10px;
+  border-radius: 10px;
+  background-color: crimson;
+}
+
+.plogo{
+  font-weight: bolder;
+}
+
+.logoContent{
+  height: 50px;
+}
+
+.sideBar-menu{
+  height: 500px;
+  padding: 20px;
+}
+
+.sideBar-menuContent{
+}
+
+.menu-items-top {
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-right-color: transparent;
+
+  padding-bottom: 20px;
+}
+.menu-items{
+  height: 90px;
+  border: 2px solid white;
+  border-left-color: transparent;
+  border-right-color: transparent;
+}
+
+.menu-logo{
+  width: 35px;
+  height: 35px;
+}
+
+.menu-btn{
+  margin-top: 20px;
+  color: white;
+}
+
+.dashBoard-content{
+  width: 180vh;
+  height: 100%;
+}
+
+.header-content{
+  padding: 50px 20px 20px;
+  width: auto;
+}
+
+hr {
+  width: auto;
+  border: 3px solid indigo; 
+  margin: 20px 0;
+}
+
+.stockAlert{
+  background-color: #004aad;
+  width: auto;
+  height: 100px;
+}
+
+.dashboard-item{
+  height: 350px;
+  background-color: #004aad;
+}
+
+
+
+/* Inventory Page */
+.inventory-Item{
+  background-color: #004aad;
+  height: 100%;
+}
+
+.lowerDiv {
+  font-size: 30px;
+  font-weight: bolder;
+  position: absolute;
+  top: 250px;
+  left: 325px;
+  width: auto;
+  height: auto;
+  z-index: 0;
+}
+
+#example{
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
+
+td{
+  text-align: center;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  /* For centering through flexbox */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  z-index: 1000; /* this makes sure the popup is on top */
+}
+
+
+.popup-content {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+  max-width: 90%;
+  text-align: center;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+
+/*Transaction Page  */
+.transaction-POS{
+  height: 500px;
+  background-color: #004aad;
+}
+
+.table-responsive{
+  max-height: 300px;
+}
+
+.transactTable th{
+  color:  white;
+  background-color: transparent !important;
+}
+
+.transactTable td {
+  color:  white;
+  border: 2px solid white;
+  border-color: white;
+  background-color: transparent !important;
+}
+
+.transaction-Sales{
+  height: 500px;
+  background-color: #004aad;
+}
+
+.transactOutput{
+  width: 100%px;
+  height: 100px;
+}
+
+.totalResult{
+  width: 50px;
+  height: 20px
+  border-color: black;
+}
+
+.calcOut{
+  width: 100%;
+  height: auto;
+}
+
+.totalAmt{
+  margin-left: 25px;
+  width: 250px;
+  height: 100%;
+}
+
+.resultTotal{
+  border-radius: 20px;
+  width: 300px;
+  border: 2px solid white;
+}
+
+.actionTransact{
+  width: 100px;
+  height: 100%;
+}
+
+
+.buttonTransact{
+  margin-left: 80px;
+  font-size: 20px;
+  width: 300px;
+  height: 40px;
+}
+
+.salesTB{
+  max-height: 400px;
+}
+
+.salesTB th{
+  color:  white;
+  background-color: transparent !important;
+}
+
+.salesTB td {
+  color:  white;
+  border: 2px solid white;
+  border-color: white;
+  background-color: transparent !important;
+}
+
+
+
+/* Sales Report Page */
+
+.saleRep-content{
+  width: 180vh;
+  height: 100%;
+}
+
+.saleContent{
+  background-color: #004aad;
+  width: auto;
+  height: 525px;
+  border-radius: 20px;
+}
+
+.reportFirst{
+  border: 2px solid white;
+  height: 400px;
+}
+
+.reportSecond{
+  border: 2px solid white;
+  height: 400px;
+}
+
